<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/aboutLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/aboutLogo"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/aboutLogo"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/aboutLogo"
        android:gravity="center"
        android:text="@string/about_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aboutVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutLogo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/about_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>